<resources>
    <string name="app_name">Votenote</string>
    <string name="navigation_drawer_open">Navigation Drawer öffnen</string>
    <string name="navigation_drawer_close">Navigation Drawer schließen</string>
    <string name="title_activity_group_management">Übungen verwalten</string>
    <string name="title_activity_diagram">Diagramm</string>
    <string name="action_new_group">Neue Gruppe</string>
    <string name="action_new_lesson">Neuer Eintrag</string>
    <string name="action_show_diagram">Diagramm</string>
    <string name="action_control_subjects">Übungen verwalten</string>
    <string name="action_show_settings">Einstellungen</string>
    <string name="action_import">Importieren</string>
    <string name="action_set_prespoints">Punkte verwalten</string>
    <string name="new_folder_button">Neuer Ordner</string>
    <string name="tutorial_control_prespoints">Präsentationspunkte verwalten</string>
    <string name="tutorial_create_your_first_subject">Erstelle mit dem Plus unten links deine erste Übung!</string>
    <string name="tutorial_add_button">Übung hinzufügen</string>
    <string name="subjectmanager_needed_work">Erforderliche Votierung</string>
    <string name="subjectmanager_needed_prespoints">Erforderliche Vortragspunkte</string>
    <string name="subjectmanager_assignments_per_lesson">Aufgaben pro Übung</string>
    <string name="subjectmanager_lesson_count">Anzahl Übungen</string>
    <string name="subjectmanager_card_lesson_count">Übungen</string>
    <string name="subjectmanager_x_assignments"> Aufgaben</string>
    <string name="subjectmanager_set_prespoints">Vortragspunkte</string>
    <string name="main_x_th_lesson">. Übung</string>
    <string name="main_x_assignments_done"> Votierungen</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="group_delete_title">löschen?</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_abort">Abbrechen</string>
    <string name="subject_manage_bad_subject_name">Dein Gruppenname enthält XML-Zeichen!</string>
    <string name="subject_manage_subject_exists_already">Übung existiert schon</string>
    <string name="subject_manage_add_title_first_subject">Erstelle deine erste Übung</string>
    <string name="subject_manage_add_title_new_subject">Neue Übung erstellen</string>
    <string name="subject_manage_add_title_change_subject">Ändere</string>
    <string name="main_add_subject_command">Übung hinzufügen!</string>
    <string name="main_toast_no_data">Diese Übung hat keine Daten!</string>
    <string name="main_dialog_pres_title">Erreichte Präsentationspunkte</string>
    <string name="main_dialog_lesson_von">von</string>
    <string name="main_dialog_lesson_votes">Votierungen</string>
    <string name="main_dialog_lesson_voted_too_much">Mehr votiert als möglich!</string>
    <string name="main_dialog_lesson_new_lesson_title">Neue Übungsnotiz</string>
    <string name="pref_general_settings">Allgemeine Einstellungen</string>
    <string name="pref_imexport">Importieren und Exportieren</string>
    <string name="subject_fragment_delete_lesson">Eintrag löschen?</string>
    <string name="subject_fragment_reached_scheduled_lesson_count">Angegebene Übungsanzahl erreicht.</string>
    <string name="subject_fragment_overshot_lesson_count">Mehr Übungen eingetragen als eingestellt!</string>
    <string name="subject_fragment_error_detected">Fehler erkannt. Werte unbrauchbar.</string>
    <string name="subject_fragment_on_average">Noch durchschnittlich</string>
    <string name="subject_fragment_assignments_per_lesson">Aufgaben pro Übung</string>
    <string name="subject_fragment_singular_vote">Votierung</string>
    <string name="add_lesson_command">Füge einen Eintrag ein.</string>
    <string name="presentation_singular">Vortrag</string>
    <string name="presentation_plural">Vorträgen</string>
    <string name="action_show_all_info">Info</string>
    <string name="calculated_values">Berechnete Werte:</string>
    <string name="assignments_per_lesson_for_exam">Aufgaben pro Übung für die Zulassung:</string>
    <string name="future_lessons">Zukünftige Übungen:</string>
    <string name="past_lessons">Absolvierte Übungen:</string>
    <string name="remaining_needed_assignments">Noch benötigte Aufgaben:</string>
    <string name="voted_assignments">Votierte Aufgaben:</string>
    <string name="needed_work_count">Benötigte Aufgaben:</string>
    <string name="maximum_possible_assignments">Maximal machbare Aufgaben:</string>
    <string name="pref_drawer_start_description">Bei gesetzter Checkbox wird der Drawer beim Starten angezeigt.</string>
    <string name="pref_lesson_sort">Bei gesetzter Checkbox wird die neueste Übung zuerst angezeigt.</string>
    <string name="pref_csv_export">CSV-Datei erstellen</string>
    <string name="pref_xml_export">Sicherung erstellen</string>
    <string name="pref_xml_import">Sicherung importieren</string>
    <string name="pref_lesson_sort_title">Übungsreihenfolge</string>
    <string name="pref_drawer_start_title">Drawer-Start</string>
    <string name="tutorial_import_description">Übungen importieren</string>
    <string name="tutorial_lessons_add">Eintrag hinzufügen</string>
    <string name="tutorial_lessons_about">Berechnete Werte anzeigen</string>
    <string name="tutorial_lessons_diagram">Diagramm anzeigen</string>
    <string name="xml_import_warning_message">Alle derzeitigen Einträge und Übungen werden gelöscht!</string>
    <string name="xml_import_dialog_title">Import</string>
    <string name="import_result_ok">Kein Fehler</string>
    <string name="import_result_bad">Fehler</string>
    <string name="xml_importer_file_not_found">Datei nicht gefunden!</string>
    <string name="subject_add_hint">Darf nicht leer sein</string>
    <string name="deletion_confirmation_title">Wirklich alle Einträge löschen?</string>
    <string name="deletion_confirmation_message">Wenn du OK wählst, werden wirklich alle derzeitigen Datenbankeinträge entfernt!</string>
    <string name="pref_check_updates_now">Auf Updates überprüfen</string>
    <string name="pref_delete_all_entries">Alle Eintrage löschen</string>
    <string name="pres_control_subjects">Übungen verwalten</string>
    <string name="pref_logging_sum">Alle unerwarteten Exceptions auf der SD-Karte speichern</string>
    <string name="voted_assignments_info_card"> votierte Aufgaben</string>
    <string name="pref_updates">Allgemeine Informationen</string>
    <string name="diagram_not_enough_entries">Nicht genug Einträge!</string>
    <string name="create_new_subject_command">In den Einstellungen kannst du Übungen hinzufügen!</string>
    <string name="undobar_deleted">Gelöscht!</string>
    <string name="infoview_vote_average_no_data">Keine Einträge</string>
    <string name="pref_used_libraries">Genutzte Bibliotheken</string>
    <string name="pref_git_repo_link">GitHub Repository</string>
    <string name="pref_help_graphview_description">GraphView von JJoe64</string>
    <string name="eula">The Software is provided to you on an "AS IS" basis, without any technical support or warranty of any kind including, without limitation, any warranty or condition of merchantability, fitness for a particular purpose and non-infringement.</string>
    <string name="eula_header">Disclaimer of Warranties and Technical Support</string>
    <string name="delete_button_text">Löschen</string>
    <string name="preference_auto_set_max_assignments">Wird eines der beiden Zahlenräder für die Übungen auf einen unmöglichen Wert gestellt, so wird das andere verschoben um einen validen Wert zu erreichen.</string>
    <string name="preference_auto_set_max_assignments_title">Invalide Werte der Zahlenräder vermeiden</string>
    <string name="eula_accept">Ich stimme zu</string>
    <string name="eula_do_not_accept">Ich stimme nicht zu</string>
    <string name="tutorial_dismiss">Ausblenden</string>
    <string name="tutorial_shortcut">Los</string>
    <string name="preferences_language">Sprache</string>
    <string name="lesson_fragment_info_card_assignments_per_lesson_description">Aufgaben pro Übung</string>
    <string name="preferences_language_please_restart">Bitte starte Votenote neu!</string>
    <string name="preferences_eula">EULA</string>
    <string name="tutorial_lessons_add_lesson">Übung hinzufügen</string>
    <string name="drawer_edit">Übung bearbeiten</string>
    <string name="drawer_choose_subject_to_edit">Wähle die Übung aus die du bearbeiten möchtest</string>
    <string name="diagram_show_x_axis_as_percentage">X-Achse als Prozentwert</string>
    <string name="subject_manager_dialog_subject_name">Name der Übung</string>
    <string name="title_activity_subject_creation">Übung erstellen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="admission_counter_change_dialog_title">%1$s ändern</string>
    <string name="lesson_dialog_fragment_picker_info_text">%1$d von %2$d Votierungen</string>
    <string name="pref_summary_save_last_selected_meta_pos">Speichern, welcher Prozentzähler zuletzt aktiviert war. Die Übung wird auf jeden Fall gespeichert.</string>
    <string name="pref_title_save_last_selected_meta_pos">Gewählte Positionen speichern</string>
    <string name="voted_assignments_w_placeholder_info_card">%1$d votierte Aufgaben</string>
    <string name="number_of_done_assignments_lesson_card">%1$d von %2$d Votierungen</string>
    <string name="x_th_lesson_lesson_card">%1$s. Übung</string>
    <string name="activate_swipe_to_delete_title">Feature aktivieren?</string>
    <string name="swipe_to_delete_lesson_enable_feature_dialog_message">Du hast versucht ein Element durch wischen zu löschen. Möchtest du dieses Feature aktiviert lassen?</string>
    <string name="dialog_yes">Ja</string>
    <string name="pref_swipe_to_delete_lesson">Löschen durch Swipen</string>
    <string name="minimum_points_text">%d Punkte Minimum</string>
    <string name="percentage_card_assignments_per_lesson">%d Aufgaben pro Übung</string>
    <string name="percentage_card_target_lesson_conut">~%d Übungen</string>
    <string name="percentage_card_target_percentage">%d%% benötigt</string>
    <string name="estimation_description_worst">Dieser Schätzungsmodus nutzt die größte für diesen Zähler gegebene Anzahl verfügbarer Aufgaben anstelle von \"Aufgaben pro Übung\".</string>
    <string name="estimation_description_best">Dieser Schätzungsmodus nutzt die kleinste für diesen Zähler gegebene Anzahl verfügbarer Aufgaben anstelle von \"Aufgaben pro Übung\". Sinnvollerweise sollte man hier Vorsicht walten lassen.</string>
    <string name="estimation_description_mean">Dieser Schätzungsmodus nutzt die durchschnittliche für diesen Zähler gegebene Anzahl verfügbarer Aufgaben anstelle von \"Aufgaben pro Übung\".</string>
    <string name="estimation_description_user">In diesem Schätzungsmodus wird zum Bestimmen der Aufgaben pro Übung der Wert von \"Aufgaben pro Übung\" genutzt. Standardmäßig genutzt.</string>
    <string name="estimation_name_user">Nutzer</string>
    <string name="estimation_name_mean">Mittel</string>
    <string name="estimation_name_worst">Worst case</string>
    <string name="preferences_backup_share_summary">Zeigt Apps an, die das Backup verarbeiten</string>
    <string name="preferences_backup_share_title">Backup teilen</string>
    <string name="preferences_backup_export_summary">Speichert ein Backup auf der SD-Karte</string>
    <string name="preferences_backup_export_title">Backup erstellen</string>
    <string name="preferences_backup_import_summary">Lädt ein Backup von der SD-Karte</string>
    <string name="preferences_backup_import_title">Backup importieren</string>
    <string name="subject_manager_main_card_add_percentage">+ Prozentzähler</string>
    <string name="subject_manager_main_card_add_counter">+ Punktezähler</string>
    <string name="name_der_bung">Name der Übung</string>
</resources>