<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_general_settings">

        <PreferenceScreen android:title="@string/pres_control_subjects">
            <intent
                android:targetClass="de.oerntec.votenote.subject_management.SubjectManagementListActivity"
                android:targetPackage="de.oerntec.votenote" />
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="reverse_lesson_sort"
            android:summary="@string/pref_lesson_sort"
            android:title="@string/pref_lesson_sort_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="open_drawer_on_start"
            android:summary="@string/pref_drawer_start_description"
            android:title="@string/pref_drawer_start_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="move_max_assignments_picker"
            android:summary="@string/preference_auto_set_max_assignments"
            android:title="@string/preference_auto_set_max_assignments_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="save_last_selected_meta_pos"
            android:summary="@string/pref_summary_save_last_selected_meta_pos"
            android:title="@string/pref_title_save_last_selected_meta_pos" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_logging"
            android:summary="@string/pref_logging_sum"
            android:title="Logging" />

        <ListPreference
            android:entries="@array/language_names"
            android:entryValues="@array/language_codes"
            android:key="language"
            android:title="@string/preferences_language" />

        <de.oerntec.votenote.preferences.DeletionConfirmationPreference
            android:key="delete_entries"
            android:title="@string/pref_delete_all_entries" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_imexport">

        <de.oerntec.votenote.preferences.CustomActionPreference
            android:key="csv_export"
            android:title="@string/pref_csv_export" />
        <de.oerntec.votenote.preferences.CustomActionPreference
            android:key="backup_share"
            android:summary="@string/preferences_backup_share_summary"
            android:title="@string/preferences_backup_share_title" />
        <de.oerntec.votenote.preferences.CustomActionPreference
            android:key="backup_export"
            android:summary="@string/preferences_backup_export_summary"
            android:title="@string/preferences_backup_export_title" />
        <de.oerntec.votenote.preferences.CustomActionPreference
            android:key="backup_import"
            android:summary="@string/preferences_backup_import_summary"
            android:title="@string/preferences_backup_import_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_updates">
        <Preference
            android:key="source_link"
            android:title="@string/pref_git_repo_link" />
        <de.oerntec.votenote.preferences.CustomActionPreference
            android:key="used_libraries"
            android:title="@string/pref_used_libraries" />
        <de.oerntec.votenote.preferences.CustomActionPreference
            android:key="show_eula"
            android:title="@string/preferences_eula" />
        <Preference
            android:key="version_key"
            android:title="Version 1.4.2" />
    </PreferenceCategory>
</PreferenceScreen>