<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_new_entry"
        android:text="@string/tutorial_add_button"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primary_text_default_material_dark" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_action_import"
        android:text="@string/tutorial_import_description"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primary_text_default_material_dark" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tutorial_create_your_first_subject"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/primary_text_default_material_dark" />
</LinearLayout>